# bike-lane-karen

./: .clineignore  .clinerules  .env.example  .gitignore  .~lock.notes.md#  .~lock.notes.odt#  20260506T101003_session.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  addressneighborhoodfeature.md  austin311_bot.py  brainstorm.MD  deepseek.md  fly.toml  hatecrimes.md  netlify.toml  nixpacks.toml  notes.md  notes.odt  open311_cache.py  open311_client.py  open311_ingest.py  pyproject.toml  railway.json  requirements.txt  service_codes.txt
.claude/: settings.json  settings.local.json
.continue/: permissions.yaml  permissions.yaml.backup
.qwen/: settings.json
alerts/: db.py  handlers.py  jobs.py
analysis/: 311_analysis_report_20260327_144207.json  311categories.txt
animalsvc/: __init__.py  animal_bot.py  coyote_bot.py  dead_animal_bot.py  dead_animal_trends.py  trends.py
archive/: 311_analysis_report_20260327_142950.json  analyze_complaints.py  check_tickets.py  dashboard.py  filter_csv.ps1  filter_csv.py  test_category_search.py
bicycle/: __init__.py  bicycle_bot.py  bicycle_complaints.db  scrape_bicycle_complaints.py
bike_lane_karen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
capmetro/: __init__.py  metrobike.py  research.md  smoke_check.py
childcare/: __init__.py  childcare_bot.py
crime/: crime_map.py  hate_crime.py  trends.py
dashboards/: bicycle_dashboard.py  dashboard_311.py
data/: 311_categories.parquet  311austin.htm  bicycle_complaints.parquet
docs/: CNAME  index.html  pulse.json
graffiti/: .env.example  __init__.py  config.py  graffiti_bot.py  ingest_graffiti_data.py  remediation_analysis.py  telegram_bot.py  trends.py
graffitibot/: README.md  analyze_graffiti_patterns.py  graffiti_abatement_bot_proposal.md  graffiti_bot.py  hotspot_explanation.py  (+2 more)
(+110 files in other folders)
