[project]
name = "bike-lane-karen"
version = "0.1.0"
description = "Austin 311 Bicycle Infrastructure Complaints Catalog"
readme = "README.md"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "typer[all]",
    "python-telegram-bot==21.0",
    "python-dotenv",
    "folium",
]

[project.scripts]
austin311-bot = "austin311_bot:main"
open311-ingest = "open311_ingest:main"
scrape-bicycle = "bicycle.scrape_bicycle_complaints:main"
search-311 = "tools.search_311_categories:main"
open311-aggregate = "tools.open311_aggregate_heatmap:main"

[tool.setuptools]
py-modules = [
    "open311_ingest",
    "austin311_bot",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"